--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "express-session": "^1.15.6",
     "express-ws": "^3.0.0",
     "google-spreadsheet": "^2.0.6",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "mongoose": "^4.13.17",
@@ -42,7 +42,7 @@
     "snekfetch": "^3.6.4",
     "socket.io": "^1.7.3",
     "socket.io-client": "^2.1.1",
-    "tmi.js": "github:dbkynd/tmi.js",
+    "tmi.js": "github:dbkynd/tmi.js#upstream",
     "twitchps": "github:dbkynd/twitchps",
     "winston": "^2.4.4",
     "winston-daily-rotate-file": "^1.4.6",
