--- a/package.json
+++ b/package.json
@@ -17,40 +17,40 @@
   },
   "homepage": "https://github.com/dbkynd/twitch-streaminfo#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "client-oauth2": "^4.2.1",
-    "connect-mongo": "^2.0.1",
+    "body-parser": "^1.19.0",
+    "client-oauth2": "^4.2.5",
+    "connect-mongo": "^3.2.0",
     "currency-symbol-map": "^4.0.4",
-    "debug": "~2.6.3",
-    "ejs": "^2.6.1",
-    "emojione": "^4.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "express-ws": "^3.0.0",
-    "google-spreadsheet": "^2.0.6",
+    "debug": "^4.1.1",
+    "ejs": "^3.0.1",
+    "emojione": "^4.5.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "express-ws": "^4.0.0",
+    "google-spreadsheet": "^2.0.8",
     "lodash": "^4.17.15",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
-    "mongoose": "^4.13.17",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "mongoose": "^5.8.10",
     "morgan": "^1.9.1",
-    "node-fetch": "^2.2.0",
-    "passport": "^0.4.0",
+    "node-fetch": "^2.6.0",
+    "passport": "^0.4.1",
     "passport-twitch-new": "^0.0.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
-    "serve-favicon": "~2.4.2",
-    "snekfetch": "^3.6.4",
-    "socket.io": "^1.7.3",
-    "socket.io-client": "^2.1.1",
+    "serve-favicon": "^2.5.0",
+    "snekfetch": "^4.0.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tmi.js": "github:dbkynd/tmi.js#upstream",
     "twitchps": "github:dbkynd/twitchps",
-    "winston": "^2.4.4",
-    "winston-daily-rotate-file": "^1.4.6",
-    "ws": "^2.3.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2",
+    "ws": "^7.2.1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "stylelint": "^7.10.1",
-    "stylelint-config-standard": "^16.0.0"
+    "eslint": "^6.8.0",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^19.0.0"
   }
 }
