--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Custom page to view tips, subs, resubs, cheers, and chat controls.",
   "main": "init",
   "scripts": {
-    "start": "node init",
+    "start": "yarn && node init",
     "prettier": "prettier --write **/*.{js,md,json} --ignore-path .gitignore",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
