--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "snekfetch": "^4.0.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "tmi.js": "github:dbkynd/tmi.js#upstream",
+    "tmi.js": "^1.5.0",
     "twitchps": "github:dbkynd/twitchps",
     "winston": "^2.4.4",
     "winston-daily-rotate-file": "^1.4.6",
