--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
-    "passport-twitch-new": "^0.0.1",
+    "passport-twitch": "^1.0.3",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
