--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dbkynd/twitch-streaminfo#readme",
   "dependencies": {
+    "@d-fischer/passport-twitch": "^1.0.5",
     "body-parser": "^1.19.0",
     "client-oauth2": "^4.2.5",
     "connect-mongo": "^3.2.0",
@@ -37,7 +38,6 @@
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
-    "passport-twitch": "^1.0.3",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
