--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Custom page to view tips, subs, resubs, cheers, and chat controls.",
   "main": "init",
   "scripts": {
-    "start": "node init",
+    "start": "cross-env NODE_ENV=production node init",
+    "dev": "cross-env NODE_ENV=development node app",
     "prettier": "prettier --write **/*.{js,md,json} --ignore-path .gitignore",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
@@ -24,8 +25,10 @@
     "body-parser": "^1.19.0",
     "client-oauth2": "^4.2.5",
     "connect-mongo": "^3.2.0",
+    "cross-env": "^7.0.2",
     "currency-symbol-map": "^4.0.4",
     "debug": "^4.1.1",
+    "discord.js": "^12.2.0",
     "ejs": "^3.0.1",
     "emojione": "^4.5.0",
     "express": "^4.17.1",
@@ -35,7 +38,9 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.8.10",
+    "mongoose-sequence": "^5.2.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "randomstring": "^1.1.5",
