--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^3.0.1",
     "emojione": "^4.5.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.0",
     "express-ws": "^4.0.0",
     "lodash": "^4.17.15",
